--- a/GroupUp/GroupUp.csproj
+++ b/GroupUp/GroupUp.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Migrations\202007121053495_MakeCntInfoNonRequired.Designer.cs">
       <DependentUpon>202007121053495_MakeCntInfoNonRequired.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007121131450_AddGroupObjects.cs" />
+    <Compile Include="Migrations\202007121131450_AddGroupObjects.Designer.cs">
+      <DependentUpon>202007121131450_AddGroupObjects.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Group.cs" />
@@ -278,6 +282,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007121053495_MakeCntInfoNonRequired.resx">
       <DependentUpon>202007121053495_MakeCntInfoNonRequired.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007121131450_AddGroupObjects.resx">
+      <DependentUpon>202007121131450_AddGroupObjects.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
