--- a/GroupUp/GroupUp.csproj
+++ b/GroupUp/GroupUp.csproj
@@ -193,6 +193,14 @@
     <Compile Include="Migrations\202007121131450_AddGroupObjects.Designer.cs">
       <DependentUpon>202007121131450_AddGroupObjects.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007121349004_TryingToFixUserGroupTable.cs" />
+    <Compile Include="Migrations\202007121349004_TryingToFixUserGroupTable.Designer.cs">
+      <DependentUpon>202007121349004_TryingToFixUserGroupTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202007121352226_TableFix2.cs" />
+    <Compile Include="Migrations\202007121352226_TableFix2.Designer.cs">
+      <DependentUpon>202007121352226_TableFix2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Group.cs" />
@@ -290,6 +298,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007121131450_AddGroupObjects.resx">
       <DependentUpon>202007121131450_AddGroupObjects.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007121349004_TryingToFixUserGroupTable.resx">
+      <DependentUpon>202007121349004_TryingToFixUserGroupTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007121352226_TableFix2.resx">
+      <DependentUpon>202007121352226_TableFix2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
