--- a/GroupUp/packages.config
+++ b/GroupUp/packages.config
@@ -19,8 +19,11 @@
   <package id="Microsoft.AspNet.Razor.tr" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.Core.tr" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb.tr" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.tr" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization.tr" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
