--- a/GroupUp/GroupUp.csproj
+++ b/GroupUp/GroupUp.csproj
@@ -345,6 +345,10 @@
     <Compile Include="Migrations\202007121352226_TableFix2.Designer.cs">
       <DependentUpon>202007121352226_TableFix2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007141819209_AddChatLogToGroup.cs" />
+    <Compile Include="Migrations\202007141819209_AddChatLogToGroup.Designer.cs">
+      <DependentUpon>202007141819209_AddChatLogToGroup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Group.cs" />
@@ -462,6 +466,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007121352226_TableFix2.resx">
       <DependentUpon>202007121352226_TableFix2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007141819209_AddChatLogToGroup.resx">
+      <DependentUpon>202007141819209_AddChatLogToGroup.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
