--- a/GroupUp/packages.config
+++ b/GroupUp/packages.config
@@ -19,10 +19,10 @@
   <package id="Microsoft.AspNet.Razor.tr" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
-  <package id="Microsoft.AspNet.SignalR.Core.tr" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.Core.tr" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net472" />
-  <package id="Microsoft.AspNet.SignalR.SystemWeb.tr" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb.tr" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.tr" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization.tr" version="1.1.3" targetFramework="net472" />
@@ -54,6 +54,8 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="RestSharp" version="105.2.3" targetFramework="net472" />
+  <package id="SendGrid" version="9.18.0" targetFramework="net472" />
+  <package id="starkbank-ecdsa" version="1.2.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
