--- a/GroupUp/GroupUp.csproj
+++ b/GroupUp/GroupUp.csproj
@@ -366,8 +366,13 @@
     <Compile Include="Migrations\202007151836561_AddVerificationProperties.Designer.cs">
       <DependentUpon>202007151836561_AddVerificationProperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007161044034_AddClosedGroupsObject.cs" />
+    <Compile Include="Migrations\202007161044034_AddClosedGroupsObject.Designer.cs">
+      <DependentUpon>202007161044034_AddClosedGroupsObject.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ClosedGroups.cs" />
     <Compile Include="Models\EmailSender.cs" />
     <Compile Include="Models\Group.cs" />
     <Compile Include="Models\GroupReport.cs" />
@@ -504,6 +509,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007151836561_AddVerificationProperties.resx">
       <DependentUpon>202007151836561_AddVerificationProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007161044034_AddClosedGroupsObject.resx">
+      <DependentUpon>202007161044034_AddClosedGroupsObject.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
