--- a/GroupUp/GroupUp.csproj
+++ b/GroupUp/GroupUp.csproj
@@ -389,6 +389,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ClosedGroupViewModel.cs" />
     <Compile Include="ViewModels\GetLocationViewModel.cs" />
+    <Compile Include="ViewModels\GroupRatingViewModel.cs" />
     <Compile Include="ViewModels\GroupReportViewModel.cs" />
     <Compile Include="ViewModels\GroupRequestsViewModel.cs" />
     <Compile Include="ViewModels\GroupDetailsViewModel.cs" />
@@ -471,6 +472,7 @@
     <Content Include="Views\Users\IncreaseSecurityLevel.cshtml" />
     <Content Include="Views\Groups\CreatorDetails.cshtml" />
     <Content Include="Views\Groups\ClosedDetails.cshtml" />
+    <Content Include="Views\Groups\Rate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
