--- a/GroupUp/GroupUp.csproj
+++ b/GroupUp/GroupUp.csproj
@@ -388,6 +388,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ClosedGroupViewModel.cs" />
+    <Compile Include="ViewModels\CreateGroupViewModel.cs" />
     <Compile Include="ViewModels\GetLocationViewModel.cs" />
     <Compile Include="ViewModels\GroupRatingViewModel.cs" />
     <Compile Include="ViewModels\GroupReportViewModel.cs" />
