--- a/GroupUp/GroupUp.csproj
+++ b/GroupUp/GroupUp.csproj
@@ -400,6 +400,7 @@
     <Compile Include="ViewModels\GroupRequestsViewModel.cs" />
     <Compile Include="ViewModels\GroupDetailsViewModel.cs" />
     <Compile Include="ViewModels\ISLViewModel.cs" />
+    <Compile Include="ViewModels\ModeratorGroupsViewModel.cs" />
     <Compile Include="ViewModels\ModeratorLockoutViewModel.cs" />
     <Compile Include="ViewModels\ModeratorUserDetailsViewModel.cs" />
     <Compile Include="ViewModels\ModeratorUsersViewModel.cs" />
@@ -490,6 +491,7 @@
     <Content Include="Views\Moderators\Users.cshtml" />
     <Content Include="Views\Moderators\UserDetails.cshtml" />
     <Content Include="Views\Moderators\ChangeLockoutDate.cshtml" />
+    <Content Include="Views\Moderators\Groups.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
